@@ -1,3 +1,7 @@
+2003-06-07  Casper S. Hornstrup  <chorns@users.sourceforge.net>
+
+	* ntoskrnl/cm/regfile.c (CmiCopyKey): Fix unsigned/signed warning.
+
 2003-06-05  Casper S. Hornstrup  <chorns@users.sourceforge.net>
 
 	* lib/user32/windows/icon.c (CURSORICON_FindBestCursor,
